--- a/cart.service
+++ b/cart.service
@@ -2,8 +2,8 @@
 Description = Cart Service
 [Service]
 User=roboshop
-Environment=REDIS_HOST=redis.prabhutech.online
-Environment=CATALOGUE_HOST=catalogue.prabhutech.online
+Environment=REDIS_HOST=redis.prabhutech.shop
+Environment=CATALOGUE_HOST=catalogue.prabhutech.shop
 Environment=CATALOGUE_PORT=8080
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=cart
