--- a/roboshop.conf
+++ b/roboshop.conf
@@ -7,8 +7,8 @@ location /images/ {
 location /api/catalogue/ { proxy_pass http://catalogue.prabhutech.shop:8080/; }
 location /api/user/ { proxy_pass http://user.prabhutech.shop:8080/; }
 location /api/cart/ { proxy_pass http://cart.prabhutech.shop:8080/; }
-location /api/shipping/ { proxy_pass http://localhost:8080/; }
-location /api/payment/ { proxy_pass http://localhost:8080/; }
+location /api/shipping/ { proxy_pass http://shipping.prabhutech.shop:8080/; }
+location /api/payment/ { proxy_pass http://payment.prabhutech.shop:8080/; }
 
 location /health {
   stub_status on;
